--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "css-loader": "^1.0.1",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "react": "^16.6.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.9.0",
     "react-dom": "^16.6.1",
+    "redux": "^4.0.4",
     "style-loader": "^0.23.1"
   },
   "keywords": [
